# DashboardDjango

./: passenger_wsgi.py  pyproject.toml
DashboardDjango/: asgi.py  wsgi.py
config/: db.sqlite3
config/database/: production.py
config/settings/: base.py  dev.py  prod.py  production.py
dashboards/admin/: __init__.py  item_admin.py  user_admin.py
dashboards/management/commands/: generate_objects.py
dashboards/management/commands/generate/: generate.py
dashboards/migrations/: 0001_initial.py
dashboards/models/: __init__.py  item.py  user.py
dashboards/static/: widget.css
dashboards/templates/: dashboard.html  dashboard_card.html
dashboards/templatetags/: dashboard_widgets.py
templates/admin/: index.html
